--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,50 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background: green;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.card {
+  display: inline-block;
+  margin: 0 auto;
+  width: 300px;
+  height: 450px;
+  border-radius: 15px;
+  border: 1px solid black;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10%;
+}
+.card-top {
+  top: 20px;
+  left: 20px;
+  position: absolute;
+}
+.card-bottom {
+  bottom: 20px;
+  right: 20px;
+  position: absolute;
+  rotate: 180deg;
+}
+.card-number {
+  line-height: 450px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 100px;
+}
+
+.card-bottom,
+.color-change {
+  font-size: 80px;
+  color: black;
+}
+
+.card-top,
+.color-change {
+  font-size: 80px;
+  color: black;
+}
